<resources>
    <string name="app_name">BoiledWaterNote</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_format_list_front_icon">"● "</string>
    <string name="insert_img">插入图片</string>
    <string name="dialog_insert_image_camera">拍摄</string>
    <string name="dialog_insert_image_album">相册</string>
    <string name="slide_menu_article">文章</string>
    <string name="slide_menu_all">所有</string>
    <string name="slide_menu_note">笔记</string>
    <string name="slide_menu_image">图片</string>
    <string name="slide_menu_privacy">隐私</string>
    <string name="slide_menu_recycle">回收站</string>
    <string name="slide_menu_about">关于</string>
    <string name="slide_menu_setting">设置</string>
    <string name="slide_menu_item_title">白开水笔记</string>
    <string name="note_list_empty_title">无题</string>
    <string name="note_list_article_item_delete_failed">删除笔记失败</string>
    <string name="note_list_note_item_delete_failed">删除便签失败！</string>
    <string name="note_list_save_privacy_failed">保存到私密仓库失败！</string>

    <string name="note_edit_phone_text_title">你选择了电话：%s</string>
    <string name="note_edit_phone_text_action">拨号</string>
    <string name="note_edit_url_text_title">你选择了网页：%s？</string>
    <string name="note_edit_url_text_action">跳转</string>
    <string name="note_edit_email_text_title">你选择了邮箱：%s？</string>
    <string name="note_edit_email_text_action">发送邮件</string>

    <string name="image_list_delete_failed">删除图片失败</string>
    <string name="image_list_change_edit_status">进入编辑模式</string>


    <string name="title_activity_main2">Main2Activity</string>
    <string name="note_save_failed">保存失败！</string>
    <string name="title_activity_image_preview">ImagePreviewActivity</string>
    <string name="note_list_notice_title">提醒</string>
    <string name="note_list_ok">好的</string>
    <string name="note_list_cancel">算了</string>
    <string name="note_list_notice_move_to_privacy">是否将该笔记加入隐私仓库？</string>
    <string name="note_list_notice_out_from_privacy">是否将该笔记从隐私仓库移除？</string>
    <string name="note_list_notice_recycle">是否将该笔记从回收站移除？</string>
    <string name="note_list_notice_note_delete">是否删除快捷便签？</string>
    <string name="note_list_notice_article_delete">是否删除此条笔记？</string>
    <string name="note_list_notice_empty">内容为空</string>
    <string name="settings_item_title">笔记样式</string>
    <string name="settings_style_title">界面</string>
    <string name="settings_function_title">功能</string>
    <string name="note_list_style_stagger">瀑布流布局</string>
    <string name="note_list_style_linear">垂直布局</string>
    <string name="switch_open">已开启</string>
    <string name="switch_close">已关闭</string>
    <string name="blank" />
    <string name="privacy_type_touch_id">指纹识别</string>
    <string name="privacy_type_graphy">图形解锁</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_next">继续</string>
    <string name="graphy_unlock_password_key">-</string>
    <string name="settings_graphy_unlock_title">点击设置图形解锁</string>
    <string name="settings_graphy_unlock_new_password">设置新密码</string>
    <string name="settings_graphy_unlock_reset_password">重置密码</string>
    <string name="settings_priovacy_type_title">隐私笔记加密方式</string>
    <string name="settings_priovacy_type_graphy">图形识别</string>
    <string name="settings_privacy_switch">隐私笔记加密</string>

</resources>
