<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/nav_all"
            android:icon="@drawable/vector_drawable_all"
            android:title="@string/slide_menu_all" />
        <item
            android:id="@+id/nav_article"
            android:icon="@drawable/vector_drawable_article"
            android:title="@string/slide_menu_article" />
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/vector_drawable_note"
            android:title="@string/slide_menu_note" />
        <item
            android:id="@+id/nav_image"
            android:icon="@drawable/vector_drawable_image"
            android:title="@string/slide_menu_image" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/vector_drawable_privacy"
            android:title="@string/slide_menu_privacy" />
        <item
            android:id="@+id/nav_recycle"
            android:icon="@drawable/vector_drawable_discard"
            android:title="@string/slide_menu_recycle" />
    </group>

    <item android:title="@string/slide_menu_item_title">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/vector_drawable_about"
                android:title="@string/slide_menu_about" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/vector_drawable_setting"
                android:title="@string/slide_menu_setting" />
        </menu>
    </item>

</menu>
